Include blog link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 	</head>
 	<body>
 		<h1>Hughes of Balmain</h1>
+		<h2>Blog</h2>
+        <p>Read the blog at <a href="https://hughesofbalmain.blogspot.com/">https://hughesofbalmain.blogspot.com/</a></p>
 		<h2>Podcast</h2>
-        <p>Subscribe to the podcast via the feed at <a href="https://hughesofbalmain.github.io/rss.xml">https://hughesofbalmain.github.io/rss.xml</a></p>
+        <p>Subscribe to the podcast at <a href="https://hughesofbalmain.github.io/rss.xml">https://hughesofbalmain.github.io/rss.xml</a></p>
 	</body>
 </html>
