--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<h2>Blog</h2>
         <p>Read the blog at <a href="https://hughesofbalmain.blogspot.com/">https://hughesofbalmain.blogspot.com/</a></p>
 		<h2>Podcast</h2>
+		<p>A selection of family videos</p>
 		<ul>
 			<li><a href="https://itunes.apple.com/podcast/hughes-of-balmain/id261832613" title="iTunes">Subscribe via iTunes</a></li>
 			<li><a href="https://pca.st/jmWb" title="Pocket Casts">Subscribe via Pocket Casts</a></li>
