--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<h2>Podcast</h2>
 		<p>A selection of family videos</p>
 		<ul>
-			<li><a href="https://itunes.apple.com/podcast/hughes-of-balmain/id261832613" title="iTunes">Subscribe via iTunes</a></li>
-			<li><a href="https://pca.st/jmWb" title="Pocket Casts">Subscribe via Pocket Casts</a></li>
+			<li><a href="https://podcasts.apple.com/podcast/hughes-of-balmain/id261832613" title="">View in Apple Podcasts</a></li>
+			<li><a href="podcast://hughesofbalmain.github.io/rss.xml" title="Pocket Casts">Subscribe via Apple Podcasts</a></li>
 			<li><a href="https://hughesofbalmain.github.io/rss.xml" title="XML Feed">Subscribe via XML</a></li>
 		</ul>
 	</body>
