--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h2>Podcast</h2>
 		<p>A selection of family videos</p>
 		<ul>
-			<li><a href="https://podcasts.apple.com/podcast/hughes-of-balmain/id261832613" title="Apple Podcasts Preview">Apple Podcasts Preview</a></li>
+			<li><a href="https://apple.co/3BQ6zRm" title="Apple Podcasts Preview">Apple Podcasts Preview</a></li>
 			<li><a href="podcast://hughesofbalmain.github.io/rss.xml" title="Apple Podcasts">Subscribe via Apple Podcasts</a></li>
 			<li><a href="https://hughesofbalmain.github.io/rss.xml" title="XML Feed">Subscribe via XML</a></li>
 		</ul>
