Use promotion image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="apple-itunes-app" content="app-id=261832613">
 		<meta name="Author" content="Hughes of Balmain" />
 		<meta name="description" content="Family videos from Hughes of Balmain" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=1200" />
 		<meta property="og:description" content="Family videos from Hughes of Balmain" />
 		<meta property="og:site_name" content="Hughes of Balmain" />
 		<meta property="og:title" content="Hughes of Balmain" />
@@ -13,13 +13,8 @@
 		<title>Hughes of Balmain</title>
 	</head>
 	<body>
-		<h1>Hughes of Balmain</h1>
-		<h2>Podcast</h2>
-		<p>A selection of family videos</p>
-		<ul>
-			<li><a href="https://apple.co/3BQ6zRm" title="Apple Podcasts Preview">Apple Podcasts Preview</a></li>
-			<li><a href="podcast://hughesofbalmain.github.io/rss.xml" title="Apple Podcasts">Subscribe via Apple Podcasts</a></li>
-			<li><a href="https://hughesofbalmain.github.io/rss.xml" title="XML Feed">Subscribe via XML</a></li>
-		</ul>
+		<a href="https://apple.co/3BQ6zRm" title="Hughes of Balmain">
+			<img src="/images/promote.png" width="1080" height="1080" alt="Hughes of Balmain"/>
+		</a>
 	</body>
 </html>
