--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="description" content="Family videos from Hughes of Balmain" />
 		<meta name="viewport" content="width=1120" />
 		<meta property="og:description" content="Family videos from Hughes of Balmain" />
+		<meta property="og:image" content="https://hughesofbalmain.github.io/images/artwork.png" />
 		<meta property="og:site_name" content="Hughes of Balmain" />
 		<meta property="og:title" content="Hughes of Balmain" />
 		<meta property="og:url" content="https://hughesofbalmain.github.io" />
